chore : fixed gap in section

--- a/css/style.scss
+++ b/css/style.scss
@@ -1352,7 +1352,7 @@ nav{
 
 .sect-team-mates{
     width: 100%;
-    margin: 1.35em auto 1.35em auto;
+    margin: 1.35em auto 0 auto;
     text-align: center;
     /* overflow: hidden; */
     position: relative;
